deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 941876206785.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: ecr-secret
